tests/errors/c/macro-body-not-an-expression.h
#define m void f(void
m
